--- a/styles.css
+++ b/styles.css
@@ -54,8 +54,8 @@
   } 
   
   body {
-    background-image: "/web_bg.png"; 
-    background-color: #000;
+    background-image: url("/web_bg.png"); 
+    background-color:black;
     align-content: center;
     margin: auto;
     height: 100%;
@@ -73,6 +73,13 @@
     ;
   }
   
+  .homeBackground {
+    position: relative;
+    top: -50px;
+    left: 0;
+    border: 1px red solid;
+  }
+
   .logo {
     display: block;
     max-width: 230px;
@@ -84,12 +91,13 @@
   
   .title {
     font-size: 18px;
-    color: red;
+    color: white;
     font-family: SFProText-Light;
+    align-self: center;    
   }
   
   .container {
-    background-image: "/home_background.png";
+    background-image: url("/home_background.png");
     background-repeat: no-repeat;
     background-size: contain;
     overflow: hidden;
