Setting background color to white.

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@
   
   body {
     background-image: url("/web_bg.png"); 
-    background-color:black;
+    background-color:white;
     align-content: center;
     margin: auto;
     height: 100%;
